[project]
name = "openaq_api"
version = "3.0.0"
description = "OpenAQ REST API"
authors = [
    {name = "Russ Biggs",email = "russ@openaq.org"},
    {name = "Christian Parker", email = "chris@talloaks.io"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "orjson (>=3.10.15,<4.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "mangum (>=0.19.0,<0.20.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "starlette (>=0.46.1,<0.47.0)",
    "buildpg (>=0.4,<0.5)",
    "aiocache (>=0.12.3,<0.13.0)",
    "pyhumps (>=3.8.0,<4.0.0)",
    "annotated-types (>=0.7.0,<0.8.0)",
    "boto3 (>=1.37.10,<2.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)"
]

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
httpx = "^0.28.1"

[tool.poetry.group.lint.dependencies]
ruff = "^0.9.10"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
