[project]
name = "cloudfront_logs"
version = "0.1.0"
description = "OpenAQ REST API log transfer"
authors = [
    {name = "Russ Biggs",email = "russ@openaq.org"},
    {name = "Christian Parker", email = "chris@talloaks.io"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyhumps (>=3.8.0,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "s3transfer (>=0.11.4,<0.12.0)",
    "six (>=1.17.0,<2.0.0)",
    "urllib3 (>=2.3.0,<3.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "pydantic (>=2.11.0,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "jmespath (>=1.0.1,<2.0.0)",
    "annotated-types (>=0.7.0,<0.8.0)"
]

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
httpx = "^0.28.1"

[tool.poetry.group.lint.dependencies]
ruff = "^0.9.10"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
